<resources>
    <string name="app_name">Kuurv</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Hello,</string>
    <string name="app_web">[test@test.com]</string>
    <string name="alert_exit">Are you sure you want to exit?</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported in this device.</string>
    <string name="speech_prompt">Speak color name which you want to change color</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="str_logout_confirmation">Are you sure you want to logout?</string>
    <string name="str_server_error_try_again">Server connection error. Please try again.</string>
    <string name="str_server_error_someting_wrong">Something went wrong. Please try again.</string>
    <string name="str_no_more_data_found">No more data found.</string>
    <string name="str_no_internet_connection">No internet connection.</string>
    <string name="str_logout_success">User logout successfully.</string>
    <string name="str_ok">OK</string>
    <string name="str_exit">Exit</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_done">Done</string>
    <string name="str_back">Back</string>
    <string name="str_next">Next</string>
    <string name="str_change">Change</string>
    <string name="str_choose_option">Choose Option</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_view_photo">View Photo</string>
    <string name="str_submit">Submit</string>
    <string name="str_send">Send</string>
    <string name="str_view">View</string>
    <string name="str_share">Share</string>
    <string name="str_save">Save</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
    <string name="str_delete">Delete</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_call">Call</string>
    <string name="str_logout">Logout</string>
    <string name="str_remove">Remove</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="str_skip">Skip</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_sign_up_name">Name</string>
    <string name="str_sign_up_business_name">Business Name</string>
    <string name="str_sign_up_mobile_no">Mobile No.</string>
    <string name="str_sign_up_username">Name</string>
    <string name="str_sign_up_account_name">Account Name(e.g. Home, Office)</string>
    <string name="str_sign_up_email_address">Email</string>
    <string name="str_sign_up_address">Address</string>
    <string name="str_signup">Sign up</string>
    <string name="str_sign_up_enter_name">Please Enter your Name</string>
    <string name="str_sign_up_enter_account_name">Enter your account name</string>
    <string name="str_sign_up_enter_business_name">Enter business name</string>
    <string name="str_sign_up_enter_email_address">Please enter your Email</string>
    <string name="str_sign_up_enter_valid_email_address">Please enter your mail</string>
    <string name="str_sign_up_enter_mobile_no">Enter your mobile no</string>
    <string name="str_sign_up_enter_valid_mobile_no">Mobile no should be 10 to 15 digit.</string>
    <string name="str_sign_up_enter_valid_password">Password should be atleast 6 charcters</string>
    <string name="str_sign_up_enter_confirm_password">Confirm Password</string>
    <string name="str_sign_up_enter_address">Enter address</string>
    <string name="str_sign_up_enter_password">Enter your  password</string>
    <string name="str_sign_up_enter_Conferm_password">Enter your Conferm password</string>
    <string name="str_sign_up_enname">Enter your name</string>
    <string name="str_register">Submit</string>
    <string name="str_profile_updated_success">Profile updated successfully.</string>
    <string name="str_sign_up_already_account">Already have an account? </string>
    <string name="str_sign_up_i_agree">I agree to</string>
    <string name="str_registers">Register</string>
    <string name="str_log_in">Log in</string>
    <string name="str_settings_feedback_enter_feedback">Please enter your feedback.</string>
    <string name="str_sign_up_terms_condition">Terms &amp; Conditions</string>
    <string name="str_sign_up_agree_terms_condition">Please agree to Terms &amp; Conditions</string>
    <string name="str_sign_up_already_register">%1$s this mobile no is already registered. Please register with
        different mobile no.
    </string>
    <string name="str_sign_up_password_not_match">Password and Conferm Password should Match</string>
    <string name="str_sign">Log in</string>
    <string name="str_login_email_address">Email</string>
    <string name="str_login_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_login_forgot_password">Forgot Password?</string>
    <string name="str_title_forgot_password">Forgot Password</string>
    <string name="str_login_enter_password">Please enter your password</string>
    <string name="password_length_error">Password should be greater than 6 and less than 15</string>
    <string name="str_password_link">Your password change successfully.</string>
    <string name="str_login_dont_account">Don\'t have an account? SignUp here</string>
    <string name="str_login_remember_pw">I accept all</string>
    <string name="activity_main_menu_dashboard">Home</string>
    <string name="activity_main_menu_help">Help</string>
    <string name="activity_main_menu_about_us">About Us</string>
    <string name="activity_main_menu_logout">Logout</string>
    <string name="activity_main_menu_buy_now">Buy Now</string>
    <string name="activity_main_menu_Setting">Account Settings</string>
    <string name="doorbell_message_hint">What\'s on your mind?</string>
    <string name="doorbell_email_hint">Your email address</string>
    <string name="question1">
        \t\t
        1)My Bluetooth is on but I can\'t Access
        \n \u0009\u0009\u0009\u0009
        my Kuurv Tracker
    </string>
    <string name="answer1">\t\t\u0009\u0009
        Sometimes you may need to exit out of
        \n \u0009\u0009\u0009\u0009
        the app
        itself and then go back into in
        \n
        \u0009\u0009\u0009\u0009
        app to access your kuurv tracker
        \n
        \u0009\u0009\u0009\u0009
        successfully.</string>
    <string name="question2">
        \t\t
        2)How to Place Your Kuurv Tracker on
        \n\u0009\u0009\u0009\u0009
        a Device
    </string>
    <string name="answer2">
        \t\t\u0009\u0009
        a.Make sure surface of device being
        \n \u0009\u0009\u0009\u0009
        placed
         on is clean and dry (you may
        \n \u0009\u0009\u0009\u0009
        clean with rubbing alcohol, if needed)
    </string>
    <string name="answer2_b">
        \t\t\u0009\u0009
        b.Gently peel off the blue adhesive peel
        \n \u0009\u0009\u0009\u0009
        off of the bottom of the tracker
    </string>
    <string name="answer2_c">
        \t\t\u0009\u0009
        c.Gently place the tracker on your
        \n \u0009\u0009\u0009\u0009
        device (Make sure it is on the spot you
        \n \u0009\u0009\u0009\u0009
        want, and also be aware that the tracker
        \n\u0009\u0009\u0009\u0009
        is not obstructing any charging outlets)
    </string>
    <string name="answer2_d">\t\t\u0009\u0009
        d.Now press down firmly and on
        \n \u0009\u0009\u0009\u0009
        the top of the tracker and all sides
        \n
        \u0009\u0009\u0009\u0009
        of it (Do it for 30 seconds)
    </string>
    <string name="question3">
        \t\t
        3)How to Physically Remove the
        \n
        \u0009\u0009\u0009\u0009
        tracker off of a Device
    </string>
    <string name="answer3">
        \t\t
        \u0009\u0009
        You may use rubbing alcohol and
        \n
        \u0009\u0009\u0009\u0009
        a dull butter knife to gently pry the
        \n
        \u0009\u0009\u0009\u0009
        tracker off of any device.Please
        \n
        \u0009\u0009\u0009\u0009
        be cautious when doing this.</string>
    <string name="question4">
        \t\t
        4)How to delete your tracker
    </string>
    <string name="answer4">
        \t\t
        \u0009\u0009
        a.Select th Kuurv tracker you wish
        \n
        \u0009\u0009\u0009\u0009
        you delete(if there are multiples on
        \n\u0009\u0009\u0009\u0009
        your account)</string>
    <string name="answer4_b">
        \t\t
        \u0009\u0009
        b.Press the more options (3 dots
        \n
        \u0009\u0009\u0009\u0009
        icon) on the top right corner of the
        \n
        \u0009\u0009\u0009\u0009
        homepage)
    </string>
    <string name="answer4_c">
        \t\t
        \u0009\u0009
        c.Select Delete Tracker
        \n
        \u0009\u0009\u0009\u0009
        *Note Kuurv tracker must be
        \n
        \u0009\u0009\u0009\u0009
        connected in order to delete
    </string>
    <string name="question5">
       \u0020\u0020\u00205)How to Re-Apply the Adhesive \n \u0020\u0020\u0020\u0020\u0020Tape to your Tracker
       </string>
    <string name="answer5_a">
        \t\t
        \u0009\u0009
        a.Use rubbing alcohol and a cloth
        \n
        \u0009\u0009\u0009\u0009
        to clean the adhesive residue off
        \n
        \u0009\u0009\u0009\u0009
        of the bottom of the tracker
    </string>
    <string name="answer5_b">
        \t\t
        \u0009\u0009
        b.Make sure the bottom of the
        \n
        \u0009\u0009\u0009\u0009
        tracker is pretty clean and dry
    </string>
    <string name="answer5_c">
        \t\t
        \u0009\u0009
        c.Use the pull tab on the blue
        \n
        \u0009\u0009\u0009\u0009
        adhesive to remove it from its
        \n
        \u0009\u0009\u0009\u0009
        original display
    </string>
    <string name="answer5_d">
        \t\t
        \u0009\u0009
        d.Carefully place the adhesive on
        \n
        \u0009\u0009\u0009\u0009
        the bottom of the tracker fitting as
        \n
        \u0009\u0009\u0009\u0009
        best as possible
    </string>
    <string name="answer5_e">
        \t\t
        \u0009\u0009
        e.Press down firmly on all sides of
        \n
        \u0009\u0009\u0009\u0009
        the adhesive to make sure the
        \n
        \u0009\u0009\u0009\u0009
        adhesive transfers over onto the
        \n
        \u0009\u0009\u0009\u0009
        bottom of the tracker when you
        \n
        \u0009\u0009\u0009\u0009
        are ready to remove it.
    </string>
    <string name="answer5_f">
        \t
        \t
        \u0009\u0009
        f.Firmly press down on the tape for
        \n
        \u0009\u0009\u0009\u0009
        20-30 seconds.
    </string>
    <string name="answer5_g">
        \t\t
        \u0009\u0009
        g.When you are ready to place
        \n
        \u0009\u0009\u0009\u0009
        the tracker on an item remove the
        \n
        \u0009\u0009\u0009\u0009
        blue strip and apply.
    </string>
    <string name="question6">
        \t\t
        \u0009\u00096)
        More Help
    </string>
    <string name="answer6">
        \t\t
        \u0009\u0009
        Please reach out to
        \n
        \u0009\u0009\u0009\u0009
        <font fgcolor='#0000FF'>connect@kuurvtracker.com</font> and
        \n
        \u0009\u0009\u0009\u0009
        we will respond within 24 hours or
        \n
        \u0009\u0009\u0009\u0009
        sooner!
    </string>
</resources>