<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/_10sdp"
              android:paddingRight="@dimen/_10sdp"
              android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/doorbell_email_hint"
            android:theme="@style/MyEditTextBlack">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/frg_feedback_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/_14sdp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/doorbell_message_hint"
            android:theme="@style/MyEditTextBlack">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/frg_feedback_et_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine|textNoSuggestions"
                android:maxLines="4"
                android:minLines="4"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/_14sdp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/frg_feedback_button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/str_send"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp"/>
</LinearLayout>
